Fix back link spacing when in progress banner present

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -77,6 +77,10 @@ img {
     margin-bottom: 0;
   }
 
+  .panel-border-wide {
+    margin-top: $gutter;
+  }
+
   .related-items {
     border: none;
 
